# Fainder-Redone

./: .gitignore  Cargo.toml  PROGRESS.md  RESULTS.md  THESIS_STORY.md  WHAT_TO_DO_THURSDAY.md  pyproject.toml
MD files/: ABLATION_PLAN.md  BENCHMARK_GUIDE.md  DATA_SETUP_GUIDE.md  DELIVERY_SUMMARY.txt  EVAL_10GB_COMMANDS.md  FINAL_RESULTS.md  THESIS_MAPPING.md
analysis/: plot_ablation_parallelism.py  plot_all_results.py  plot_hardware_ablation.py
archive/: EXPERIMENT_RESULTS.md  RESULTS.md
archive/old_md_files/: ABLATION_STUDY.md  BENCHMARK_WITH_WITHOUT_COLLATION.md  (+9 more)
experiments/: benchmark_rust_batch.sh  collate_benchmark_queries.py  run_benchmarks_dev_small.sh  run_benchmarks_eval_large.sh  run_benchmarks_eval_medium.sh  setup_dev_small.sh  setup_eval_large.sh  setup_eval_medium.sh  setup_gittables_minimal.sh
fainder/: .nfs00000000076a01c3000001c7  __init__.py  utils.py
scripts/: ablation_batch_search.sh  ablation_cluster_par.sh  ablation_columnar.sh  ablation_eytzinger.sh  ablation_f16.sh  ablation_kary.sh  ablation_kary_f16.sh  ablation_layout.sh  ablation_minimal_rerun.sh  ablation_numa.sh  ablation_parallel.sh  ablation_simd.sh  baseline_comparison.sh  benchmark_full_pipeline.sh  benchmark_rebinning.sh  benchmark_serialization.sh  check_setup_status.sh  collect_results.sh  eval_10gb_complete.sh  eval_10gb_fast.sh  eval_medium_fast.sh  launch_tmux_experiments.sh  monitor_eval_medium.sh  perf_branch_misses.sh  perf_comprehensive.sh
src/: engine.rs  index.rs  kary_search.rs  lib.rs  rebinning.rs  simd_search.rs
tests/: test_rust_binding.py
(+4 files in other folders)
